# ChangeLog

0.3.0-dev

    * Fixed broken command resends
    * Fixed state changed handler
    * Added new endpoint /api/connections with JSON response
    * Skipped pidfile when process is not alive

0.2.0 (2020-12-14)

    * JOB_INFO fix
    * Service must be start using daemon script prusa-link
    * Implicit config path is /etc/Prusa-Link/prusa-link.ini
    * Implicit settings path is {HOME}/prusa_printer_settings.ini
    * Wizard - part II
    * Api-Key in INFO event
    * Wizard redesign


0.1.3 (2020-12-01)

    * Report at least a file name for SD prints
    * Wizard - part I
    * Fix command handling and re-undo fw double-ok workarounds
      (FW commit gd167b3bd or newer is required)

0.1.2 (2020-11-23)

    * New FW (3.9.2.3566) required
    * local web service on http://IP-address:8080
    * file upload from Prusa Slicer (use `PrusaSlicer` Api-Key)